// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bills bills container should match the snapshot if is Loading is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Bills
    billArray={
      Array [
        Object {
          "bills": Array [
            Object {
              "id": "hr123",
              "name": "sara",
              "somethingelse": "xxx",
            },
            Object {
              "id": "hr234",
              "name": "David",
              "somethingelse": "xxx",
            },
          ],
          "congress": 115,
        },
      ]
    }
    errorMessage=""
    favorites={
      Array [
        "hr-45123",
        "hr-7653",
      ]
    }
    fetchBillsThunk={[MockFunction]}
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="bill-container"
      >
        <div
          className="bill-msg"
        >
          <h3
            className="title"
          >
            Below are the 20 most recent bills that became law during the 115th Congress.
          </h3>
          <h3>
            Search a different congress
          </h3>
          <div
            className="btn-holder"
          >
            <button
              className="113"
              onClick={[Function]}
            >
              113
            </button>
            <button
              className="114"
              onClick={[Function]}
            >
              114
            </button>
            <button
              className="115"
              onClick={[Function]}
            >
              115
            </button>
            <button
              className="116"
              onClick={[Function]}
            >
              116
            </button>
          </div>
        </div>
        <div
          className="cardContainer"
        >
          <withRouter(Connect(Card))
            id="hr123"
            name="sara"
            somethingelse="xxx"
          />
          <withRouter(Connect(Card))
            id="hr234"
            name="David"
            somethingelse="xxx"
          />
        </div>
      </section>,
      "id": "bills-pg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="bill-msg"
          >
            <h3
              className="title"
            >
              Below are the 20 most recent bills that became law during the 115th Congress.
            </h3>
            <h3>
              Search a different congress
            </h3>
            <div
              className="btn-holder"
            >
              <button
                className="113"
                onClick={[Function]}
              >
                113
              </button>
              <button
                className="114"
                onClick={[Function]}
              >
                114
              </button>
              <button
                className="115"
                onClick={[Function]}
              >
                115
              </button>
              <button
                className="116"
                onClick={[Function]}
              >
                116
              </button>
            </div>
          </div>,
          <div
            className="cardContainer"
          >
            <withRouter(Connect(Card))
              id="hr123"
              name="sara"
              somethingelse="xxx"
            />
            <withRouter(Connect(Card))
              id="hr234"
              name="David"
              somethingelse="xxx"
            />
          </div>,
        ],
        "className": "bill-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="title"
              >
                Below are the 20 most recent bills that became law during the 115th Congress.
              </h3>,
              <h3>
                Search a different congress
              </h3>,
              <div
                className="btn-holder"
              >
                <button
                  className="113"
                  onClick={[Function]}
                >
                  113
                </button>
                <button
                  className="114"
                  onClick={[Function]}
                >
                  114
                </button>
                <button
                  className="115"
                  onClick={[Function]}
                >
                  115
                </button>
                <button
                  className="116"
                  onClick={[Function]}
                >
                  116
                </button>
              </div>,
            ],
            "className": "bill-msg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Below are the 20 most recent bills that became law during the 115th Congress.",
                "className": "title",
              },
              "ref": null,
              "rendered": "Below are the 20 most recent bills that became law during the 115th Congress.",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search a different congress",
              },
              "ref": null,
              "rendered": "Search a different congress",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="113"
                    onClick={[Function]}
                  >
                    113
                  </button>,
                  <button
                    className="114"
                    onClick={[Function]}
                  >
                    114
                  </button>,
                  <button
                    className="115"
                    onClick={[Function]}
                  >
                    115
                  </button>,
                  <button
                    className="116"
                    onClick={[Function]}
                  >
                    116
                  </button>,
                ],
                "className": "btn-holder",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "113",
                    "className": "113",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "113",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "114",
                    "className": "114",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "114",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "115",
                    "className": "115",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "115",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "116",
                    "className": "116",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "116",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(Card))
                id="hr123"
                name="sara"
                somethingelse="xxx"
              />,
              <withRouter(Connect(Card))
                id="hr234"
                name="David"
                somethingelse="xxx"
              />,
            ],
            "className": "cardContainer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "hr123",
              "nodeType": "function",
              "props": Object {
                "id": "hr123",
                "name": "sara",
                "somethingelse": "xxx",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "hr234",
              "nodeType": "function",
              "props": Object {
                "id": "hr234",
                "name": "David",
                "somethingelse": "xxx",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="bill-container"
        >
          <div
            className="bill-msg"
          >
            <h3
              className="title"
            >
              Below are the 20 most recent bills that became law during the 115th Congress.
            </h3>
            <h3>
              Search a different congress
            </h3>
            <div
              className="btn-holder"
            >
              <button
                className="113"
                onClick={[Function]}
              >
                113
              </button>
              <button
                className="114"
                onClick={[Function]}
              >
                114
              </button>
              <button
                className="115"
                onClick={[Function]}
              >
                115
              </button>
              <button
                className="116"
                onClick={[Function]}
              >
                116
              </button>
            </div>
          </div>
          <div
            className="cardContainer"
          >
            <withRouter(Connect(Card))
              id="hr123"
              name="sara"
              somethingelse="xxx"
            />
            <withRouter(Connect(Card))
              id="hr234"
              name="David"
              somethingelse="xxx"
            />
          </div>
        </section>,
        "id": "bills-pg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="bill-msg"
            >
              <h3
                className="title"
              >
                Below are the 20 most recent bills that became law during the 115th Congress.
              </h3>
              <h3>
                Search a different congress
              </h3>
              <div
                className="btn-holder"
              >
                <button
                  className="113"
                  onClick={[Function]}
                >
                  113
                </button>
                <button
                  className="114"
                  onClick={[Function]}
                >
                  114
                </button>
                <button
                  className="115"
                  onClick={[Function]}
                >
                  115
                </button>
                <button
                  className="116"
                  onClick={[Function]}
                >
                  116
                </button>
              </div>
            </div>,
            <div
              className="cardContainer"
            >
              <withRouter(Connect(Card))
                id="hr123"
                name="sara"
                somethingelse="xxx"
              />
              <withRouter(Connect(Card))
                id="hr234"
                name="David"
                somethingelse="xxx"
              />
            </div>,
          ],
          "className": "bill-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  className="title"
                >
                  Below are the 20 most recent bills that became law during the 115th Congress.
                </h3>,
                <h3>
                  Search a different congress
                </h3>,
                <div
                  className="btn-holder"
                >
                  <button
                    className="113"
                    onClick={[Function]}
                  >
                    113
                  </button>
                  <button
                    className="114"
                    onClick={[Function]}
                  >
                    114
                  </button>
                  <button
                    className="115"
                    onClick={[Function]}
                  >
                    115
                  </button>
                  <button
                    className="116"
                    onClick={[Function]}
                  >
                    116
                  </button>
                </div>,
              ],
              "className": "bill-msg",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Below are the 20 most recent bills that became law during the 115th Congress.",
                  "className": "title",
                },
                "ref": null,
                "rendered": "Below are the 20 most recent bills that became law during the 115th Congress.",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Search a different congress",
                },
                "ref": null,
                "rendered": "Search a different congress",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="113"
                      onClick={[Function]}
                    >
                      113
                    </button>,
                    <button
                      className="114"
                      onClick={[Function]}
                    >
                      114
                    </button>,
                    <button
                      className="115"
                      onClick={[Function]}
                    >
                      115
                    </button>,
                    <button
                      className="116"
                      onClick={[Function]}
                    >
                      116
                    </button>,
                  ],
                  "className": "btn-holder",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "113",
                      "className": "113",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "113",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "114",
                      "className": "114",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "114",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "115",
                      "className": "115",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "115",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "116",
                      "className": "116",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "116",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withRouter(Connect(Card))
                  id="hr123"
                  name="sara"
                  somethingelse="xxx"
                />,
                <withRouter(Connect(Card))
                  id="hr234"
                  name="David"
                  somethingelse="xxx"
                />,
              ],
              "className": "cardContainer",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "hr123",
                "nodeType": "function",
                "props": Object {
                  "id": "hr123",
                  "name": "sara",
                  "somethingelse": "xxx",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "hr234",
                "nodeType": "function",
                "props": Object {
                  "id": "hr234",
                  "name": "David",
                  "somethingelse": "xxx",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Bills bills container should match the snapshot if is Loading is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Bills
    billArray={
      Array [
        Object {
          "bills": Array [
            Object {
              "id": "hr123",
              "name": "sara",
              "somethingelse": "xxx",
            },
            Object {
              "id": "hr234",
              "name": "David",
              "somethingelse": "xxx",
            },
          ],
          "congress": 115,
        },
      ]
    }
    errorMessage=""
    favorites={
      Array [
        "hr-45123",
        "hr-7653",
      ]
    }
    fetchBillsThunk={[MockFunction]}
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="bill-container"
      >
        <div
          className="bill-msg"
        >
          <h3
            className="title"
          >
            Below are the 20 most recent bills that became law during the 115th Congress.
          </h3>
          <h3>
            Search a different congress
          </h3>
          <div
            className="btn-holder"
          >
            <button
              className="113"
              onClick={[Function]}
            >
              113
            </button>
            <button
              className="114"
              onClick={[Function]}
            >
              114
            </button>
            <button
              className="115"
              onClick={[Function]}
            >
              115
            </button>
            <button
              className="116"
              onClick={[Function]}
            >
              116
            </button>
          </div>
        </div>
        <div
          className="cardContainer"
        >
          <Loading />
        </div>
      </section>,
      "id": "bills-pg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="bill-msg"
          >
            <h3
              className="title"
            >
              Below are the 20 most recent bills that became law during the 115th Congress.
            </h3>
            <h3>
              Search a different congress
            </h3>
            <div
              className="btn-holder"
            >
              <button
                className="113"
                onClick={[Function]}
              >
                113
              </button>
              <button
                className="114"
                onClick={[Function]}
              >
                114
              </button>
              <button
                className="115"
                onClick={[Function]}
              >
                115
              </button>
              <button
                className="116"
                onClick={[Function]}
              >
                116
              </button>
            </div>
          </div>,
          <div
            className="cardContainer"
          >
            <Loading />
          </div>,
        ],
        "className": "bill-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="title"
              >
                Below are the 20 most recent bills that became law during the 115th Congress.
              </h3>,
              <h3>
                Search a different congress
              </h3>,
              <div
                className="btn-holder"
              >
                <button
                  className="113"
                  onClick={[Function]}
                >
                  113
                </button>
                <button
                  className="114"
                  onClick={[Function]}
                >
                  114
                </button>
                <button
                  className="115"
                  onClick={[Function]}
                >
                  115
                </button>
                <button
                  className="116"
                  onClick={[Function]}
                >
                  116
                </button>
              </div>,
            ],
            "className": "bill-msg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Below are the 20 most recent bills that became law during the 115th Congress.",
                "className": "title",
              },
              "ref": null,
              "rendered": "Below are the 20 most recent bills that became law during the 115th Congress.",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search a different congress",
              },
              "ref": null,
              "rendered": "Search a different congress",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="113"
                    onClick={[Function]}
                  >
                    113
                  </button>,
                  <button
                    className="114"
                    onClick={[Function]}
                  >
                    114
                  </button>,
                  <button
                    className="115"
                    onClick={[Function]}
                  >
                    115
                  </button>,
                  <button
                    className="116"
                    onClick={[Function]}
                  >
                    116
                  </button>,
                ],
                "className": "btn-holder",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "113",
                    "className": "113",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "113",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "114",
                    "className": "114",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "114",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "115",
                    "className": "115",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "115",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "116",
                    "className": "116",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "116",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Loading />,
            "className": "cardContainer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="bill-container"
        >
          <div
            className="bill-msg"
          >
            <h3
              className="title"
            >
              Below are the 20 most recent bills that became law during the 115th Congress.
            </h3>
            <h3>
              Search a different congress
            </h3>
            <div
              className="btn-holder"
            >
              <button
                className="113"
                onClick={[Function]}
              >
                113
              </button>
              <button
                className="114"
                onClick={[Function]}
              >
                114
              </button>
              <button
                className="115"
                onClick={[Function]}
              >
                115
              </button>
              <button
                className="116"
                onClick={[Function]}
              >
                116
              </button>
            </div>
          </div>
          <div
            className="cardContainer"
          >
            <Loading />
          </div>
        </section>,
        "id": "bills-pg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="bill-msg"
            >
              <h3
                className="title"
              >
                Below are the 20 most recent bills that became law during the 115th Congress.
              </h3>
              <h3>
                Search a different congress
              </h3>
              <div
                className="btn-holder"
              >
                <button
                  className="113"
                  onClick={[Function]}
                >
                  113
                </button>
                <button
                  className="114"
                  onClick={[Function]}
                >
                  114
                </button>
                <button
                  className="115"
                  onClick={[Function]}
                >
                  115
                </button>
                <button
                  className="116"
                  onClick={[Function]}
                >
                  116
                </button>
              </div>
            </div>,
            <div
              className="cardContainer"
            >
              <Loading />
            </div>,
          ],
          "className": "bill-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  className="title"
                >
                  Below are the 20 most recent bills that became law during the 115th Congress.
                </h3>,
                <h3>
                  Search a different congress
                </h3>,
                <div
                  className="btn-holder"
                >
                  <button
                    className="113"
                    onClick={[Function]}
                  >
                    113
                  </button>
                  <button
                    className="114"
                    onClick={[Function]}
                  >
                    114
                  </button>
                  <button
                    className="115"
                    onClick={[Function]}
                  >
                    115
                  </button>
                  <button
                    className="116"
                    onClick={[Function]}
                  >
                    116
                  </button>
                </div>,
              ],
              "className": "bill-msg",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Below are the 20 most recent bills that became law during the 115th Congress.",
                  "className": "title",
                },
                "ref": null,
                "rendered": "Below are the 20 most recent bills that became law during the 115th Congress.",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Search a different congress",
                },
                "ref": null,
                "rendered": "Search a different congress",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="113"
                      onClick={[Function]}
                    >
                      113
                    </button>,
                    <button
                      className="114"
                      onClick={[Function]}
                    >
                      114
                    </button>,
                    <button
                      className="115"
                      onClick={[Function]}
                    >
                      115
                    </button>,
                    <button
                      className="116"
                      onClick={[Function]}
                    >
                      116
                    </button>,
                  ],
                  "className": "btn-holder",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "113",
                      "className": "113",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "113",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "114",
                      "className": "114",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "114",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "115",
                      "className": "115",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "115",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "116",
                      "className": "116",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "116",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Loading />,
              "className": "cardContainer",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
